--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    ext{
+        kotlin_version = "1.4.32"
+        hilt_version = '2.28-alpha'
+    }
     repositories {
         google()
         jcenter()
@@ -8,6 +11,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,4 +27,27 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    core_ktx_version = '1.5.0'
+    app_compat_version = '1.3.0'
+    material_version = '1.3.0'
+    constraint_version = '2.0.4'
+    junit_version = '4.13.2'
+    junit_test_version = '1.1.2'
+    espresso_test_version = '3.3.0'
+    ui_ktx_version = '2.3.5'
+    spin_kit_version = '1.4.0'
+    picasso_version = '2.71828'
+    retrofit_version = '2.9.0'
+    okHttp3_version = '4.9.0'
+    lifecycle_version = '2.2.0'
+    arch_version = '2.1.0'
+    activity_version = '1.2.3'
+    fragment_version = '1.3.4'
+    hilt_viewmodels = '1.0.0-alpha01'
+    kotlin_coroutines_version = '1.4.2'
+    room_version = '2.2.6'
+    room_runtime_version = '2.2.5'
 }
