--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,5 @@ ext {
     kotlin_coroutines_version = '1.4.2'
     room_version = '2.2.6'
     room_runtime_version = '2.2.5'
+    data_store_version = '1.0.0-rc01'
 }
