--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //DataStore
-    implementation "androidx.datastore:datastore-preferences:$data_store_version"
+    //implementation "androidx.datastore:datastore-preferences:$data_store_version"
 
 }
