--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+
     //DataStore
     //implementation "androidx.datastore:datastore-preferences:$data_store_version"
 
