--- a/build.gradle
+++ b/build.gradle
@@ -51,4 +51,5 @@ ext {
     room_version = '2.2.6'
     room_runtime_version = '2.2.5'
     data_store_version = '1.0.0-rc01'
+    glide_version = '4.11.0'
 }
