--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,8 @@ dependencies {
     // Loading Progress - SpinKit
     implementation "com.github.ybq:Android-SpinKit:$spin_kit_version"
 
-    // Glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
+    // Fresco
+    implementation "com.facebook.fresco:fresco:$fresco_version"
 
     //DataStore
     //implementation "androidx.datastore:datastore-preferences:$data_store_version"
