--- a/build.gradle
+++ b/build.gradle
@@ -57,4 +57,5 @@ ext {
     room_runtime_version = '2.2.5'
     data_store_version = '1.0.0-rc01'
     glide_version = '4.11.0'
+    fresco_version = '2.6.0'
 }
