--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ ext {
     kotlin_coroutines_version = '1.5.0'
     room_version = '2.3.0'
     room_runtime_version = '2.2.5'
-    data_store_version = '1.0.0-rc01'
+    data_store_version = '1.0.0'
     glide_version = '4.11.0'
     fresco_version = '2.6.0'
 }
