--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".MyApp"
@@ -15,7 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVMTemplateApp"
         tools:ignore="AllowBackup,UnusedAttribute">
-        <activity android:name=".ui.MainActivity">
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".ui.CameraLocationActivity"-->
+<!--            android:exported="true" />-->
+<!--        <activity android:name=".ui.MainActivity">-->
+        <activity android:name=".ui.CameraLocationActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
