--- a/build.gradle
+++ b/build.gradle
@@ -58,4 +58,5 @@ ext {
     data_store_version = '1.0.0'
     glide_version = '4.11.0'
     fresco_version = '2.6.0'
+    image_picker_version = '2.1'
 }
