--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,6 @@ ext {
     app_compat_version = '1.3.1'
     material_version = '1.4.0'
     constraint_version = '2.1.1'
-    junit_version = '4.13.2'
-    junit_test_version = '1.1.3'
-    espresso_test_version = '3.4.0'
     ui_ktx_version = '2.3.5'
     spin_kit_version = '1.4.0'
     picasso_version = '2.71828'
@@ -58,4 +55,14 @@ ext {
     data_store_version = '1.0.0'
     glide_version = '4.11.0'
     fresco_version = '2.6.0'
+    idle_resource_version = '3.4.0'
+
+    android_core_test_version = '2.1.0'
+    android_test_versionandroid_test_version = '1.3.0'
+    androidX_test_version = '1.4.0'
+    junit_version = '4.13.2'
+    junit_test_version = '1.1.3'
+    espresso_test_version = '3.4.0'
+    mockito_version = '3.6.0'
+    mockito_kotlin_version = '2.2.0'
 }
