--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,139 +1,48 @@
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+# For a detailed guide to building and testing on Android, read the docs:
+# https://circleci.com/docs/2.0/language-android/ for more details.
+version: 2.1
+
+# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
+# See: https://circleci.com/docs/2.0/orb-intro/
+orbs:
+  android: circleci/android@1.0.3
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-28
-    environment:
-      JVM_OPTS: -Xmx3200m
+  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
+  build-and-test:
+    # These next lines define the Android machine image executor.
+    # See: https://circleci.com/docs/2.0/executor-types/
+    executor:
+      name: android/android-machine
+
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      #      - run:
-      #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
-      #         command: sudo chmod +x ./gradlew
+
+      # The next step will run the unit tests
+      - android/run-tests:
+          test-command: ./gradlew lint testDebug --continue
+
+      # Then start the emulator and run the Instrumentation tests!
+      - android/start-emulator-and-run-tests:
+          test-command: ./gradlew connectedDebugAndroidTest
+          system-image: system-images;android-25;google_apis;x86
+
+      # And finally run the release build
       - run:
-          name: Setup
+          name: Assemble release build
           command: |
-            gem install bundler
-            bundle install
-            mkdir ~/code/reports
-
-      # Detekt
-      - run:
-          name: Detekt
-          command: fastlane detekt
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: reports/detekt
-
-      # Tests
-      ## App
-      - run:
-          name: Test App
-          command: |
-            fastlane test_app
-            ./gradlew app:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: app/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: app/build/test-results
-
-      ## Core
-      - run:
-          name: Test Core
-          command: |
-            fastlane test_core
-            ./gradlew core:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: core/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: core/build/test-results
-
-      ## Launches
-      - run:
-          name: Test Launches
-          command: |
-            fastlane test_launches
-            ./gradlew features:launches:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: features/launches/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: features/launches/build/test-results
-
-      ## Detail
-      - run:
-          name: Test Detail
-          command: |
-            fastlane test_detail
-            ./gradlew features:detail:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: features/detail/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: features/detail/build/test-results
-
-      ## Abstractions
-      - run:
-          name: Test Abstractions
-          command: |
-            fastlane test_abstractions
-            ./gradlew abstractions:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: repository/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: repository/build/test-results
-
-      ## Definitions
-      - run:
-          name: Test Definitions
-          command: |
-            fastlane test_definitions
-            ./gradlew data:definitions:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: repository/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: repository/build/test-results
-
-      ## Interactors
-      - run:
-          name: Test Interactors
-          command: |
-            fastlane test_interactors
-            ./gradlew data:interactors:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: repository/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: repository/build/test-results
-
-      ## Network
-      - run:
-          name: Test Network
-          command: |
-            fastlane test_network
-            ./gradlew data:network:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: repository/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: repository/build/test-results
-
-      ## Persistence
-      - run:
-          name: Test Persistence
-          command: |
-            fastlane test_persistence
-            ./gradlew data:persistence:jacocoTestReport
-            bash <(curl -s https://codecov.io/bash)
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: repository/build/reports/tests
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: repository/build/test-results
-
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+            ./gradlew assembleRelease
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
+    jobs:
+      - build-and-test
