--- a/test_feature/build.gradle
+++ b/test_feature/build.gradle
@@ -1,26 +1,22 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.dynamic-feature'
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'kotlin-platform-android'
     id 'dagger.hilt.android.plugin'
 }
-
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdk 31
 
     defaultConfig {
-        applicationId "com.rivaldy.id.mvvmtemplateapp"
-        minSdkVersion 23
-        targetSdkVersion 31
+        applicationId "com.rivaldy.id.test_feature"
+        minSdk 23
+        targetSdk 31
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField("String", "BASE_URL", '"https://api.themoviedb.org/3/"')
-        buildConfigField("String", "API_KEY", '"8b904530a7aced766995fa063ed27355"')
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -39,10 +35,11 @@ android {
     buildFeatures {
         viewBinding true
     }
-    dynamicFeatures = [':test_feature']
 }
 
 dependencies {
+    implementation project(":app")
+
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "com.google.android.material:material:$material_version"
